# projeto-sistema-de-academia

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  cpf.json  exercises.json  tauri.conf.json  workout_history.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Logo.tsx
src/pages/: AposBusca.tsx  Carregamento.tsx  Concluido.tsx  Historico.tsx  Home.tsx  Inicio.tsx  Matricula.tsx  Planilha.tsx
src/services/: api.ts
